--- a/site-markup/index.html
+++ b/site-markup/index.html
@@ -4,15 +4,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="width=device-width" name="viewport">
     <meta name="author" content="enenkoff@mail.ru">
-    <title>Orway</title>
+    <title>Список страниц</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,400italic' rel='stylesheet' type='text/css'>
 
     <style type="text/css">
         * {margin: 0; padding: 0}
         a {text-decoration: none}
         ul {list-style: none}
-        body {background-color: #17191f}
-        .logotype {display: block; width: 250px; margin: 40px auto}
+        body {background-color: #fff}
+        .logotype {display: block; width: 50px; margin: 40px auto}
         .logotype svg,
         .logotype img {display: block; width: 100%; height: auto}
         #wrapperpage {width: 800px; margin: 0 auto}
@@ -31,32 +31,44 @@
 
         body {font: 400 28px Roboto}
         #wrapperpage ul li {margin-bottom: 15px}
-        #wrapperpage ul li span {color: #fff; }
-        #wrapperpage ul li a {color: #fff; text-decoration: underline;}
+        #wrapperpage ul li span {color: #002b4f; }
+        #wrapperpage ul li a {color: #002b4f; text-decoration: underline;}
         .no {opacity: 0.3; pointer-events: none;}
     </style>
 </head>
 <body>
 <div class="logotype">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 168.77 37.89"><g data-name="Режим изоляции"><g fill-rule="evenodd"><path d="M7.22 7.81A26.12 26.12 0 0 0 17.88 21 30.19 30.19 0 0 1 10.52 9c7.86-5 14.45-3.52 23.19-.81A48.52 48.52 0 0 1 26.85 30.8 43.36 43.36 0 0 0 38.55 4.86C28.72 2.2 16.27 2.45 7.22 7.81" fill="#fff"/><path d="M33.71 8.16A48.52 48.52 0 0 1 26.85 30.8 43.36 43.36 0 0 0 38.55 4.86L33.71 8.16" fill="#b3b3b3"/><path d="M17.46 29.59A26.13 26.13 0 0 0 24.7 14.25a30.19 30.19 0 0 1 -7.62 11.86c-8-4.88-9.89-10.73-11.83-19.69A48.52 48.52 0 0 1 28.34 1.28 43.36 43.36 0 0 0 0 3.83C2.58 14 8.64 23.74 17.46 29.59" fill="#fff"/><path d="M5.25 6.42A48.52 48.52 0 0 1 28.34 1.28 43.36 43.36 0 0 0 0 3.83L5.25 6.42" fill="#b3b3b3"/><path d="M18,37.89C25,31,31,20,31.91,10.11A26.13,26.13,0,0,0,15,11,30.19,30.19,0,0,1,29,12.09c-.53,9-4.86,14-11.43,20A48.52,48.52,0,0,1,1.53,14.68,43.36,43.36,0,0,0,18,37.89Z" fill="#fff"/><path d="M17.59 32A48.52 48.52 0 0 1 1.53 14.68 43.36 43.36 0 0 0 18 37.89L17.59 32" fill="#b3b3b3"/></g><g fill="#fff"><path d="M168.77,11.89v-.24c-.66,0-1.39.05-2,.05s-1.55-.05-2.62-.05v.24c.31.05.53.18.53.55a2.35,2.35,0,0,1-.29.92l-3.2,5.56-3.25-5.82a1.39,1.39,0,0,1-.18-.63.64.64,0,0,1,.63-.58v-.24c-1,0-2,.05-2.83.05s-1.52,0-2.23-.05v.24c.76.16,1.34.73,2.18,2.15l4.2,7.11v4.17c0,2.54-.24,3.33-1.31,3.59v.24c.89,0,1.81-.05,2.65-.05s1.76,0,2.6.05V28.9c-1-.26-1.31-1-1.31-3.59V21.14l4.64-7.55c.71-1.18,1.1-1.57,1.86-1.7ZM142.15,22.24h-5.46l2.78-6.66,2.68,6.66Zm6.4,6.9V28.9A2.72,2.72,0,0,1,147,27.28l-7.37-16.47h-.37l-7.08,16c-.55,1.26-.84,1.94-1.71,2.07v.24c.71,0,1.42-.05,2.1-.05s1.7,0,2.6.05V28.9a.75.75,0,0,1-.68-.79,3.14,3.14,0,0,1,.29-1.15l1.15-2.7h6.95L144,27a2.93,2.93,0,0,1,.24.94.88.88,0,0,1-.76,1v.24c.92,0,1.94-.05,2.94-.05.71,0,1.49,0,2.18.05ZM125.73,11.89v-.24c-.6,0-1.28.05-1.89.05-.79,0-1.71-.05-2.65-.05v.24a.8.8,0,0,1,.76.84,4,4,0,0,1-.31,1.47l-3.43,9.44-4.62-12.51h-.29l-4.62,12.51-3.41-9.44a5.52,5.52,0,0,1-.37-1.44.81.81,0,0,1,.81-.87v-.24c-1,0-2,.05-2.75.05s-1.47,0-2.18-.05v.24c.81.37,1.18,1,1.68,2.31L108.37,30h.26l4.72-12.56L118,30h.26l6-16c.45-1.23.79-1.7,1.49-2ZM94.29,29.19V29c-.73-.18-1.08-.63-1.81-1.7l-4.17-6.08a4.59,4.59,0,0,0,3.88-4.75c0-2.88-2-4.77-6.24-4.77H79.52v.24c1.08.24,1.31,1.21,1.31,3.62v9.81c0,2.52-.26,3.33-1.31,3.59v.24c.87,0,1.78-.05,2.6-.05s1.78,0,2.65.05V28.9c-1-.26-1.31-1-1.31-3.59V13.75a10.32,10.32,0,0,1,2-.16c2.75,0,4,1.31,4,3s-1.34,3.17-3.83,3.17a5.15,5.15,0,0,1-1.07-.11l-.13.18,5,7.71c.84,1.29,1.26,1.73,2.75,1.73.21,0,1,0,2.07-.13Z"/><path d="M70.46,20.45c0,5-2.83,9.4-8.24,9.4s-8.39-4.36-8.39-9.4,3-9.4,8.37-9.4,8.26,4.35,8.26,9.4ZM67,23.82c-.72,2.7-2.35,4.65-4.85,4.65-2.09,0-3.63-1.39-4.51-3.45a11.59,11.59,0,0,1-.18-8.74c.83-2.3,2.42-3.86,4.67-3.86,2.41,0,4,1.82,4.79,4.39a11.87,11.87,0,0,1,.08,7Z" fill-rule="evenodd"/></g></g></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 6.1 8.9" enable-background="new 0 0 6.1 8.9"><path d="M0,0h3.4l0.3,1.6H1.8v2.1h1.4v1.5H1.8v1.9h1.8L3.3,8.7H0V0z"></path><path d="m4.2 0h1.9l-.4 6.4h-1.1z"></path><path d="m4.2 7.9c0 .3.1.5.3.7.2.2.4.3.7.3.3 0 .5-.1.7-.3.1-.2.2-.4.2-.7 0-.3-.1-.5-.3-.7s-.4-.2-.7-.2c-.2 0-.4.1-.6.3s-.3.4-.3.6"></path></svg>
 </div>
 <div id="wrapperpage">
     <ul>
         <li>
-            <span>Заглушка</span>
-            <a target="_blank" href="dev/build/placeholder.html">placeholder.html</a>
+            <span>Главная</span>
+            <a target="_blank" href="dev/index.html">index.html</a>
         </li>
         <li>
-            <span>Блог</span>
-            <a target="_blank" href="dev/build/blog.html">blog.html</a>
+            <span>Акции</span>
+            <a target="_blank" href="dev/stocks.html">stocks.html</a>
         </li>
-        <li>
-            <span>Статья по дизу</span>
-            <a target="_blank" href="dev/build/blog-page-by-design.html">blog-page-by-design.html</a>
+        <li class="no">
+            <span>Фонды</span>
+            <a target="_blank" href="dev/holdings.html">holdings.html</a>
         </li>
-        <li>
-            <span>Статья</span>
-            <a target="_blank" href="dev/build/blog-page.html">blog-page.html</a>
+        <li class="no">
+            <span>Страница фонда</span>
+            <a target="_blank" href="dev/holding-page.html">holding-page.html</a>
+        </li>
+        <li class="no">
+            <span>Текстовая страница</span>
+            <a target="_blank" href="dev/text-page.html">text-page.html</a>
+        </li>
+        <li class="no">
+            <span>Контакты</span>
+            <a target="_blank" href="dev/contacts.html">contacts.html</a>
+        </li>
+        <li class="no">
+            <span>404</span>
+            <a target="_blank" href="dev/404.html">404.html</a>
         </li>
     </ul>
 </div>
