add svg-watch-and-rebuild-html task

--- a/site-markup/src/_code/pages/styleguide.html
+++ b/site-markup/src/_code/pages/styleguide.html
@@ -171,11 +171,21 @@
     <img src="assets/images/test-image.jpg" alt="Тестовая картинка" width="600">
 </picture>
                 </xmp>
-                <picture width="600">
-                    <source type="image/webp" srcset="assets/images/test-image.webp">
-                    <source type="image/jpeg" srcset="assets/images/test-image.jpg">
-                    <img src="assets/images/test-image.jpg" alt="Тестовая картинка" width="600">
-                </picture>
+                <div class="sct2">
+                    <picture width="600">
+                        <source type="image/webp" srcset="assets/images/test-image.webp">
+                        <source type="image/jpeg" srcset="assets/images/test-image.jpg">
+                        <img src="assets/images/test-image.jpg" alt="Тестовая картинка" width="600">
+                    </picture>
+                </div>
+                <h1 class="sct">SVG</h1>
+                <xmp class="sct">
+<i class="icon">
+    <svg xmlns="http://www.w3.org/2000/svg">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-name"/>
+    </svg>
+</i>
+                </xmp>
 
             </div>
 
